{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 19,
  "lineage": "17f30d3d-6457-a41c-386b-77c55ffc7a95",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubeadm_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:328321025895:instance/i-0c6933cdf36a6cbd3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6933cdf36a6cbd3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "key001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0760a9b6d12a0a71b",
            "private_dns": "ip-10-232-2-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.232.2.182",
            "public_dns": "ec2-3-95-164-118.compute-1.amazonaws.com",
            "public_ip": "3.95.164.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-016bc4059bfd995a1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce655534b1c4ecf9",
            "tags": {
              "Name": "kubeadm_master",
              "Owner": "Latheef",
              "customer": "Latheef"
            },
            "tags_all": {
              "Name": "kubeadm_master",
              "Owner": "Latheef",
              "customer": "Latheef"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0efd42b240331e066"
            ]
          },
          "dependencies": [
            "aws_security_group.SWARM-VPC-SG",
            "aws_subnet.SWARM-VPC-Pub-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubeadm_node1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:328321025895:instance/i-01b3385b775b2835d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b3385b775b2835d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "key001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0648d45413aaa1e43",
            "private_dns": "ip-10-232-2-211.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.232.2.211",
            "public_dns": "ec2-54-242-85-46.compute-1.amazonaws.com",
            "public_ip": "54.242.85.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a10c6bf7750335ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce655534b1c4ecf9",
            "tags": {
              "Name": "kubeadm_node1",
              "Owner": "Latheef",
              "customer": "Latheef"
            },
            "tags_all": {
              "Name": "kubeadm_node1",
              "Owner": "Latheef",
              "customer": "Latheef"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0efd42b240331e066"
            ]
          },
          "dependencies": [
            "aws_security_group.SWARM-VPC-SG",
            "aws_subnet.SWARM-VPC-Pub-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubeadm_node2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:328321025895:instance/i-0c438c29aba0d1852",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c438c29aba0d1852",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "key001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-060898aa1c02146a4",
            "private_dns": "ip-10-232-2-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.232.2.199",
            "public_dns": "ec2-54-145-165-145.compute-1.amazonaws.com",
            "public_ip": "54.145.165.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02914c2dd5d2c3ddf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce655534b1c4ecf9",
            "tags": {
              "Name": "kubeadm_node2",
              "Owner": "Latheef",
              "customer": "Latheef"
            },
            "tags_all": {
              "Name": "kubeadm_node2",
              "Owner": "Latheef",
              "customer": "Latheef"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0efd42b240331e066"
            ]
          },
          "dependencies": [
            "aws_security_group.SWARM-VPC-SG",
            "aws_subnet.SWARM-VPC-Pub-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "SWARM-VPC-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328321025895:internet-gateway/igw-0a1bd5839e3361309",
            "id": "igw-0a1bd5839e3361309",
            "owner_id": "328321025895",
            "tags": {
              "Name": "aws_vpc.SWARM-VPC.IGW"
            },
            "tags_all": {
              "Name": "aws_vpc.SWARM-VPC.IGW"
            },
            "vpc_id": "vpc-04f08c50786dea236"
          },
          "dependencies": [
            "aws_vpc.SWARM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_routing_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328321025895:route-table/rtb-0bf2287b6c2df807b",
            "id": "rtb-0bf2287b6c2df807b",
            "owner_id": "328321025895",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1bd5839e3361309",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SWARM-VPC-Public-table"
            },
            "tags_all": {
              "Name": "SWARM-VPC-Public-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f08c50786dea236"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.SWARM-VPC-IGW",
            "aws_vpc.SWARM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SWARM-VPC-rt-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ed349530fc417e1",
            "route_table_id": "rtb-0bf2287b6c2df807b",
            "subnet_id": "subnet-0ce655534b1c4ecf9"
          },
          "dependencies": [
            "aws_internet_gateway.SWARM-VPC-IGW",
            "aws_route_table.pub_routing_table",
            "aws_subnet.SWARM-VPC-Pub-subnet",
            "aws_vpc.SWARM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SWARM-VPC-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328321025895:security-group/sg-0efd42b240331e066",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efd42b240331e066",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SWARM-VPC-SG",
            "name_prefix": "",
            "owner_id": "328321025895",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04f08c50786dea236"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SWARM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SWARM-VPC-Pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328321025895:subnet/subnet-0ce655534b1c4ecf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.232.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce655534b1c4ecf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "328321025895",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SWARM-VPC-public-subnet"
            },
            "tags_all": {
              "Name": "SWARM-VPC-public-subnet"
            },
            "vpc_id": "vpc-04f08c50786dea236"
          },
          "dependencies": [
            "aws_vpc.SWARM-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SWARM-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328321025895:vpc/vpc-04f08c50786dea236",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.232.0.0/16",
            "default_network_acl_id": "acl-0b8a99ffc4279475c",
            "default_route_table_id": "rtb-0c18c99dab0e097e5",
            "default_security_group_id": "sg-0b954e8d59b998875",
            "dhcp_options_id": "dopt-0677d7426a4c8dbad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f08c50786dea236",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c18c99dab0e097e5",
            "owner_id": "328321025895",
            "tags": {
              "Name": "SWARM-VPC"
            },
            "tags_all": {
              "Name": "SWARM-VPC"
            }
          }
        }
      ]
    }
  ]
}